--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pytest = "^7.1.2"
 requests = "^2.27.1"
 pook = "^1.0.2"
 requests-mock = "^1.9.3"
+pytest-cov = "^3.0.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
