--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ packages = [
 ]
     
 [tool.poetry.scripts]
-page_loader = "page_loader.scripts.page_loader:main"
+page-loader = "page_loader.scripts.page_loader:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
@@ -25,9 +25,11 @@ requests-mock = "^1.9.3"
 pytest-cov = "^3.0.0"
 beautifulsoup4 = "^4.11.1"
 responses = "^0.21.0"
+progress = "^1.6"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
+testresources = "^2.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
