--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ page-loader = "page_loader.scripts.page_loader:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-pytest = "^7.1.2"
 requests = "^2.27.1"
 pook = "^1.0.2"
 requests-mock = "^1.9.3"
@@ -30,6 +29,7 @@ progress = "^1.6"
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 testresources = "^2.0.1"
+pytest = "6.2.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
