--- a/page_loader/a.conf
+++ b/page_loader/a.conf
@@ -25,4 +25,4 @@ args=(sys.stdout,)
 
 [formatter_sampleFormatter]
 format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
-datefmt=%d/%m/%Y %I:%M:%S
+#datefmt=%d/%m/%Y %I:%M:%S
