refactor of make_list_of_files, CustomErrors and script function

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,11 @@
 [coverage:run]
 branch = True
+omit = 
+    # omit scripts:
+    page_loader/scripts/page_loader.py
+    # omit init.py empty files:
+    page_loader/scripts/__init__.py
+
 
 [flake8]
 accept-encodings = utf-8
