--- a/.github/workflows/tests-and-linter-check.yml
+++ b/.github/workflows/tests-and-linter-check.yml
@@ -15,22 +15,22 @@ jobs:
       - name: lint application
         run: make lint
 
-  tests-check:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout repo
-        uses: actions/checkout@v2
-      - name: Install dependencies
-        run: |
-          pip install poetry
-          pip install pytest
-          make install
-      - name: test application
-        run: make test
-      - name: Test & publish code coverage
-        uses: paambaati/codeclimate-action@v3.0.0
-        env:
-          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
-        with:
-          coverageCommand: make test-coverage
-          debug: true
+#  tests-check:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: checkout repo
+#        uses: actions/checkout@v2
+#      - name: Install dependencies
+#        run: |
+#          pip install poetry
+#          pip install pytest
+#          make install
+#      - name: test application
+#        run: make test
+#      - name: Test & publish code coverage
+#        uses: paambaati/codeclimate-action@v3.0.0
+#        env:
+#          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
+#        with:
+#          coverageCommand: make test-coverage
+#          debug: true
