--- a/.github/workflows/tests-and-linter-check.yml
+++ b/.github/workflows/tests-and-linter-check.yml
@@ -3,7 +3,7 @@ name: Python CI
 on: push
 jobs:
   linter-check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
