--- a/.github/workflows/tests-and-linter-check.yml
+++ b/.github/workflows/tests-and-linter-check.yml
@@ -3,13 +3,13 @@ name: Python CI
 on: push
 jobs:
   linter-check:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: checkout repo
         uses: actions/checkout@v2
       - name: Install dependencies
         run: |
-          
+          pip install poetry
           pip install flake8
           make install
       - name: lint application
